--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "lysenkobv/yii2-geoip",
+  "name": "perfectpanel/yii2-geoip",
   "description": "Yii 2 GeoIP extension. Returns country, city, lat, lng of current or specified IP (uses MaxMind's GeoIP2 databases)",
   "keywords": ["geoip", "geolocation", "maxmind", "yii2"],
   "type": "yii2-extension",
@@ -15,7 +15,7 @@
     "php": ">=5.4.0",
     "yiisoft/yii2": ">=2.0.0",
     "maxmind-db/reader": "~1.0",
-    "lysenkobv/maxmind-geolite2-database": "*"
+    "perfectpanel/maxmind-geolite2-database": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.4"
